--- a/Thoughtology.Expresso.Tests/Thoughtology.Expresso.Tests.csproj
+++ b/Thoughtology.Expresso.Tests/Thoughtology.Expresso.Tests.csproj
@@ -71,11 +71,11 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Foundation\AutoMoqDataAttribute.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Web\Controllers\ProductsControllerTest.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
