--- a/Thoughtology.Expresso.Web/Thoughtology.Expresso.Web.csproj
+++ b/Thoughtology.Expresso.Web/Thoughtology.Expresso.Web.csproj
@@ -62,6 +62,7 @@
   <ItemGroup>
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\ProductsController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
