--- a/Thoughtology.Expresso.Tests/Thoughtology.Expresso.Tests.csproj
+++ b/Thoughtology.Expresso.Tests/Thoughtology.Expresso.Tests.csproj
@@ -31,6 +31,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework, Version=4.1.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.4.1.10715.0\lib\EntityFramework.dll</HintPath>
+    </Reference>
     <Reference Include="Moq, Version=3.1.416.3, Culture=neutral, PublicKeyToken=69f491c39445e920, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\Moq.3.1.416.3\lib\Moq.dll</HintPath>
@@ -52,7 +55,9 @@
       <HintPath>..\packages\AutoFixture.2.2.44\lib\Ploeh.SemanticComparison.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Data.Entity" />
     <Reference Include="System.Web.Mvc, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\..\..\Program Files (x86)\Microsoft ASP.NET\ASP.NET MVC 3\Assemblies\System.Web.Mvc.dll</HintPath>
@@ -67,18 +72,21 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Data\DataContextTest.cs" />
     <Compile Include="Foundation\AutoMoqDataAttribute.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Web\Controllers\PostsControllerTest.cs" />
     <Compile Include="Web\Services\MarkdownConverterTest.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Data\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <ProjectReference Include="..\Thoughtology.Expresso.Data\Thoughtology.Expresso.Data.csproj">
       <Project>{D65634FD-8D03-4909-BC4E-1E3BF97CDEBE}</Project>
       <Name>Thoughtology.Expresso.Data</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Thoughtology.Expresso.Model\Thoughtology.Expresso.Model.csproj">
+      <Project>{EACABA32-B767-48FD-96A2-91B446A5E4B9}</Project>
+      <Name>Thoughtology.Expresso.Model</Name>
     </ProjectReference>
     <ProjectReference Include="..\Thoughtology.Expresso.Web\Thoughtology.Expresso.Web.csproj">
       <Project>{6340549A-86BC-4D81-9456-5E9B227F07E8}</Project>
