--- a/Thoughtology.Expresso.Web/Thoughtology.Expresso.Web.csproj
+++ b/Thoughtology.Expresso.Web/Thoughtology.Expresso.Web.csproj
@@ -34,7 +34,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="MarkdownSharp">
+    <Reference Include="MarkdownSharp, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\MarkdownSharp.1.13.0.0\lib\35\MarkdownSharp.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
@@ -70,6 +70,7 @@
     </Compile>
     <Compile Include="Models\AccountModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\IMarkdownConverter.cs" />
     <Compile Include="Services\MarkdownConverter.cs" />
   </ItemGroup>
   <ItemGroup>
