--- a/Thoughtology.Expresso.Tests/Thoughtology.Expresso.Tests.csproj
+++ b/Thoughtology.Expresso.Tests/Thoughtology.Expresso.Tests.csproj
@@ -69,20 +69,23 @@
     </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
-    <Reference Include="xunit, Version=1.7.0.1540, Culture=neutral, PublicKeyToken=8d05b1bb7a6fdb6c, processorArchitecture=MSIL">
-      <HintPath>..\packages\xunit.1.7.0.1540\lib\xunit.dll</HintPath>
+    <Reference Include="xunit, Version=1.8.0.1549, Culture=neutral, PublicKeyToken=8d05b1bb7a6fdb6c, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\xunit.1.8.0.1549\lib\xunit.dll</HintPath>
     </Reference>
-    <Reference Include="xunit.extensions, Version=1.7.0.1540, Culture=neutral, PublicKeyToken=8d05b1bb7a6fdb6c, processorArchitecture=MSIL">
-      <HintPath>..\packages\xunit.extensions.1.7.0.1540\lib\xunit.extensions.dll</HintPath>
+    <Reference Include="xunit.extensions, Version=1.8.0.1545, Culture=neutral, PublicKeyToken=8d05b1bb7a6fdb6c, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\xunit.extensions.1.8.0.1545\lib\xunit.extensions.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Data\DataContextTest.cs" />
     <Compile Include="Foundation\AutoMoqDataAttribute.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\PostQueryServiceTest.cs" />
     <Compile Include="Web\Controllers\PostsControllerTest.cs" />
     <Compile Include="Web\Services\MarkdownConverterTest.cs" />
-    <Compile Include="Web\Services\RepositoryModuleTest.cs" />
+    <Compile Include="Web\Configuration\RepositoryModuleTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -96,11 +99,16 @@
       <Project>{EACABA32-B767-48FD-96A2-91B446A5E4B9}</Project>
       <Name>Thoughtology.Expresso.Model</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Thoughtology.Expresso.Services\Thoughtology.Expresso.Services.csproj">
+      <Project>{AA54315C-714F-4F85-9888-B6F4490663E2}</Project>
+      <Name>Thoughtology.Expresso.Services</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Thoughtology.Expresso.Web\Thoughtology.Expresso.Web.csproj">
       <Project>{6340549A-86BC-4D81-9456-5E9B227F07E8}</Project>
       <Name>Thoughtology.Expresso.Web</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
