--- a/Thoughtology.Expresso.Web/Thoughtology.Expresso.Web.csproj
+++ b/Thoughtology.Expresso.Web/Thoughtology.Expresso.Web.csproj
@@ -43,6 +43,9 @@
     <Reference Include="Autofac.Integration.Mvc">
       <HintPath>..\packages\Autofac.Mvc3.2.5.2.830\lib\NET40\Autofac.Integration.Mvc.dll</HintPath>
     </Reference>
+    <Reference Include="EntityFramework, Version=4.1.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.4.1.10715.0\lib\EntityFramework.dll</HintPath>
+    </Reference>
     <Reference Include="MarkdownSharp, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\MarkdownSharp.1.13.0.0\lib\35\MarkdownSharp.dll</HintPath>
     </Reference>
@@ -81,6 +84,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\IMarkdownConverter.cs" />
     <Compile Include="Services\MarkdownConverter.cs" />
+    <Compile Include="Configuration\RepositoryModule.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="App_Data\Expresso.sdf" />
@@ -160,6 +164,16 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Views\Posts\" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Thoughtology.Expresso.Data\Thoughtology.Expresso.Data.csproj">
+      <Project>{D65634FD-8D03-4909-BC4E-1E3BF97CDEBE}</Project>
+      <Name>Thoughtology.Expresso.Data</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Thoughtology.Expresso.Services\Thoughtology.Expresso.Services.csproj">
+      <Project>{AA54315C-714F-4F85-9888-B6F4490663E2}</Project>
+      <Name>Thoughtology.Expresso.Services</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
