--- a/Thoughtology.Expresso.Web/packages.config
+++ b/Thoughtology.Expresso.Web/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Autofac" version="2.5.2.830" />
   <package id="Autofac.Mvc3" version="2.5.2.830" />
+  <package id="EntityFramework" version="4.1.10715.0" />
   <package id="jQuery" version="1.5.1" />
   <package id="jQuery.vsdoc" version="1.5.1" />
   <package id="jQuery.Validation" version="1.8.0" />
