FIX: 'PostsController' now returns data through the service layer.

--- a/Thoughtology.Expresso.Web/Thoughtology.Expresso.Web.csproj
+++ b/Thoughtology.Expresso.Web/Thoughtology.Expresso.Web.csproj
@@ -170,6 +170,10 @@
       <Project>{D65634FD-8D03-4909-BC4E-1E3BF97CDEBE}</Project>
       <Name>Thoughtology.Expresso.Data</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Thoughtology.Expresso.Model\Thoughtology.Expresso.Model.csproj">
+      <Project>{EACABA32-B767-48FD-96A2-91B446A5E4B9}</Project>
+      <Name>Thoughtology.Expresso.Model</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Thoughtology.Expresso.Services\Thoughtology.Expresso.Services.csproj">
       <Project>{AA54315C-714F-4F85-9888-B6F4490663E2}</Project>
       <Name>Thoughtology.Expresso.Services</Name>
