--- a/Thoughtology.Expresso.Tests/Thoughtology.Expresso.Tests.csproj
+++ b/Thoughtology.Expresso.Tests/Thoughtology.Expresso.Tests.csproj
@@ -80,15 +80,15 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Data\DataContextTest.cs" />
+    <Compile Include="Data\RepositoryTest.cs" />
     <Compile Include="Foundation\AutoMoqDataAttribute.cs" />
+    <Compile Include="Foundation\DbSetStub.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\PostQueryServiceTest.cs" />
+    <Compile Include="Web\Configuration\ServiceModuleTest.cs" />
     <Compile Include="Web\Controllers\PostsControllerTest.cs" />
     <Compile Include="Web\Services\MarkdownConverterTest.cs" />
     <Compile Include="Web\Configuration\RepositoryModuleTest.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Thoughtology.Expresso.Data\Thoughtology.Expresso.Data.csproj">
