--- a/Thoughtology.Expresso.Tests/Thoughtology.Expresso.Tests.csproj
+++ b/Thoughtology.Expresso.Tests/Thoughtology.Expresso.Tests.csproj
@@ -84,7 +84,8 @@
     <Compile Include="Foundation\AutoMoqDataAttribute.cs" />
     <Compile Include="Foundation\DbSetStub.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Services\PostQueryServiceTest.cs" />
+    <Compile Include="Services\CommandServiceTest.cs" />
+    <Compile Include="Services\QueryServiceTest.cs" />
     <Compile Include="Web\Configuration\ServiceModuleTest.cs" />
     <Compile Include="Web\Controllers\PostsControllerTest.cs" />
     <Compile Include="Web\Services\MarkdownConverterTest.cs" />
