--- a/Tests/packages.config
+++ b/Tests/packages.config
@@ -4,6 +4,8 @@
   <package id="AutoFixture" version="2.4.0" />
   <package id="AutoFixture.AutoMoq" version="2.4.0" />
   <package id="AutoFixture.Xunit" version="2.4.0" />
+  <package id="CommonServiceLocator" version="1.0" />
+  <package id="EntityFramework" version="4.1.10715.0" />
   <package id="Moq" version="3.1.416.3" />
   <package id="xunit" version="1.8.0.1549" />
   <package id="xunit.extensions" version="1.8.0.1545" />
