--- a/Commands/Commands.csproj
+++ b/Commands/Commands.csproj
@@ -59,6 +59,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ErrorRecordFactory.cs" />
     <Compile Include="GetPostCommand.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ServiceLocatorCommand.cs" />
