--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -87,6 +87,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Commands\ErrorRecordFactoryTest.cs" />
     <Compile Include="Commands\GetPostCommandTest.cs" />
     <Compile Include="Commands\ServiceLocatorCommandTest.cs" />
     <Compile Include="Data\DataContextTest.cs" />
