--- a/Commands/Commands.csproj
+++ b/Commands/Commands.csproj
@@ -61,6 +61,7 @@
   <ItemGroup>
     <Compile Include="ErrorRecordFactory.cs" />
     <Compile Include="GetPostCommand.cs" />
+    <Compile Include="NewPostCommand.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ServiceLocatorCommand.cs" />
   </ItemGroup>
