--- a/Commands/Commands.csproj
+++ b/Commands/Commands.csproj
@@ -64,6 +64,7 @@
     <Compile Include="NewPostCommand.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ServiceLocatorCommand.cs" />
+    <Compile Include="SetPostCommand.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Data\Data.csproj">
