FIX: implemented 'Repository.Save' method. Configured WebDeploy properties for the 'Web' project.

--- a/Web/Web.csproj
+++ b/Web/Web.csproj
@@ -24,6 +24,10 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <ExcludeGeneratedDebugSymbol>true</ExcludeGeneratedDebugSymbol>
+    <PublishDatabases>false</PublishDatabases>
+    <DesktopBuildPackageLocation>obj\Debug\Package\Expresso-Web.zip</DesktopBuildPackageLocation>
+    <DeployIisAppPath>Default Web Site/Expresso</DeployIisAppPath>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
