--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -82,20 +82,22 @@
       <HintPath>..\packages\xunit.1.8.0.1549\lib\xunit.dll</HintPath>
     </Reference>
     <Reference Include="xunit.extensions, Version=1.8.0.1545, Culture=neutral, PublicKeyToken=8d05b1bb7a6fdb6c, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\xunit.extensions.1.8.0.1545\lib\xunit.extensions.dll</HintPath>
+      <SpecificVersion>False</SpecificVersion>
     </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Commands\ErrorRecordFactoryTest.cs" />
     <Compile Include="Commands\GetPostCommandTest.cs" />
     <Compile Include="Commands\NewPostCommandTest.cs" />
+    <Compile Include="Commands\PSCmdletExtensionTest.cs" />
     <Compile Include="Commands\ServiceLocatorCommandTest.cs" />
     <Compile Include="Commands\SetPostCommandTest.cs" />
     <Compile Include="Data\DataContextTest.cs" />
     <Compile Include="Data\RepositoryTest.cs" />
     <Compile Include="Foundation\AutoMoqDataAttribute.cs" />
     <Compile Include="Foundation\DbSetStub.cs" />
+    <Compile Include="Foundation\WritePassThroughCommand.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\CommandServiceTest.cs" />
     <Compile Include="Services\QueryServiceTest.cs" />
