--- a/Commands/Commands.csproj
+++ b/Commands/Commands.csproj
@@ -78,12 +78,17 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Configuration\Expresso.Format.ps1xml" />
-    <None Include="Configuration\Expresso.psd1" />
+    <None Include="Metadata\Expresso.Format.ps1xml">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Metadata\Expresso.psd1" />
+    <None Include="Configuration\Install.ps1" />
+    <None Include="Metadata\Expresso.Types.ps1xml" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>xcopy /Y /F "$(ProjectDir)Configuration\*.*" $(TargetDir)</PostBuildEvent>
+    <PostBuildEvent>xcopy /Y /F "$(ProjectDir)Metadata\*.*" "$(TargetDir)"
+xcopy /Y /F "$(ProjectDir)Configuration\*.*" "$(TargetDir)..\"</PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
