FIX: moved the connection string parameter out of the cmdlets and into the configuration file. There should be a 'Set-ExpressoConnectionString' cmdlet to be able to set it. Alternatively Expresso should implement a PSDrive provider to navigate the items in the data store.

--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -87,11 +87,11 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Commands\ErrorRecordFactoryTest.cs" />
+    <Compile Include="Commands\Runtime\ErrorRecordFactoryTest.cs" />
     <Compile Include="Commands\GetPostCommandTest.cs" />
     <Compile Include="Commands\NewPostCommandTest.cs" />
-    <Compile Include="Commands\PSCmdletExtensionTest.cs" />
-    <Compile Include="Commands\ServiceLocatorCommandTest.cs" />
+    <Compile Include="Commands\Runtime\PSCmdletExtensionTest.cs" />
+    <Compile Include="Commands\Runtime\ServiceLocatorTest.cs" />
     <Compile Include="Commands\SetPostCommandTest.cs" />
     <Compile Include="Data\DataContextTest.cs" />
     <Compile Include="Data\RepositoryTest.cs" />
