--- a/Commands/Commands.csproj
+++ b/Commands/Commands.csproj
@@ -51,6 +51,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
+    <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data.Entity" />
     <Reference Include="System.Management.Automation, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
@@ -64,7 +65,8 @@
     <Compile Include="NewPostCommand.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Runtime\PSCmdletExtension.cs" />
-    <Compile Include="ServiceLocatorCommand.cs" />
+    <Compile Include="Runtime\ServiceLocator.cs" />
+    <Compile Include="Command.cs" />
     <Compile Include="SetPostCommand.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -78,6 +80,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <None Include="App.config" />
     <None Include="Metadata\Expresso.Format.ps1xml">
       <SubType>Designer</SubType>
     </None>
