--- a/Commands/packages.config
+++ b/Commands/packages.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Autofac" version="2.4.5.724" />
-  <package id="Autofac.CommonServiceLocator" version="2.4.5.724" />
+  <package id="Autofac" version="2.5.2.830" />
+  <package id="Autofac.CommonServiceLocator-unofficial" version="2.5.2.830" />
   <package id="CommonServiceLocator" version="1.0" />
   <package id="EntityFramework" version="4.1.10715.0" />
 </packages>
