FIX: the deployment location of the web site is now set to the IIS root directory.

--- a/Commands/App.config
+++ b/Commands/App.config
@@ -2,6 +2,6 @@
 <configuration>
     <connectionStrings>
         <add name="Expresso"
-             connectionString="C:\Users\Enrico\Websites\Expresso\App_Data\Expresso.sdf" />
+             connectionString="C:\inetpub\wwwroot\Expresso\App_Data\Expresso.sdf" />
     </connectionStrings>
 </configuration>
