Adds project metadata for the deployment package.

--- a/Web/Web.csproj
+++ b/Web/Web.csproj
@@ -130,6 +130,9 @@
   <ItemGroup>
     <Content Include="Install.ps1" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Web.nuspec" />
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
