--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -111,6 +111,10 @@
     <Reference Include="xunit.runner.msbuild">
       <HintPath>..\packages\xunit.1.9.2\lib\net20\xunit.runner.msbuild.dll</HintPath>
     </Reference>
+    <Reference Include="xunit.runner.utility, Version=1.9.2.1705, Culture=neutral, PublicKeyToken=8d05b1bb7a6fdb6c, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\xunit.1.9.2\lib\net20\xunit.runner.utility.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Commands\Runtime\ErrorRecordFactoryTest.cs" />
