Adds empty database migrations project.

--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -2,6 +2,7 @@
 <repositories>
   <repository path="..\Commands\packages.config" />
   <repository path="..\Data\packages.config" />
+  <repository path="..\Database\packages.config" />
   <repository path="..\Services\packages.config" />
   <repository path="..\Tests\packages.config" />
   <repository path="..\Web\packages.config" />
