--- a/Database/packages.config
+++ b/Database/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="dbup" version="3.2.1" targetFramework="net40" />
+  <package id="OctoPack" version="3.0.33" targetFramework="net40" />
 </packages>
