--- a/Database/Database.csproj
+++ b/Database/Database.csproj
@@ -46,11 +46,15 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="Scripts\Script0006 - Changes cardinality of the tags to posts relationship.sql" />
     <EmbeddedResource Include="Scripts\Script0004 - Adds column to indicate posts that are drafts.sql" />
     <EmbeddedResource Include="Scripts\Script0005 - Sets published posts as not being drafts.sql" />
     <EmbeddedResource Include="Scripts\Script0002 - Adds test data for posts.sql" />
     <EmbeddedResource Include="Scripts\Script0001 - Creates tables for posts and tags.sql" />
     <EmbeddedResource Include="Scripts\Script0003 - Adds test data for tags.sql" />
+    <EmbeddedResource Include="Scripts\Script0007 - Moves associations between posts and tags to the relationship table.sql" />
+    <EmbeddedResource Include="Scripts\Script0008 - Deletes post foreign key from the tags table.sql" />
+    <EmbeddedResource Include="Scripts\Script0009 - Deletes orphan duplicates from the tags table.sql" />
     <None Include="App.config" />
     <None Include="Deploy.ps1">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
