Replaces the generic query service with specific implementations.

--- a/Services/Services.csproj
+++ b/Services/Services.csproj
@@ -52,8 +52,9 @@
     <Compile Include="IMarkdownConverter.cs" />
     <Compile Include="IQueryService.cs" />
     <Compile Include="MarkdownConverter.cs" />
-    <Compile Include="QueryService.cs" />
+    <Compile Include="PostQueryService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TagQueryService.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Data\Data.csproj">
