--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -132,7 +132,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\CommandServiceTest.cs" />
     <Compile Include="Services\MarkdownConverterTest.cs" />
-    <Compile Include="Services\QueryServiceTest.cs" />
+    <Compile Include="Services\PostQueryServiceTest.cs" />
+    <Compile Include="Services\TagQueryServiceTest.cs" />
     <Compile Include="Web\Configuration\ServiceModuleTest.cs" />
     <Compile Include="Web\Controllers\PostsControllerTest.cs" />
     <Compile Include="Web\Configuration\RepositoryModuleTest.cs" />
